// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MusicControl should accept custom props 1`] = `
<button
  aria-label="Play background music"
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-justifyContent-1777fci"
  data-testid="music-control-button"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  role="button"
  style={
    {
      "transitionDuration": "0s",
    }
  }
  type="button"
>
  <div
    className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-1fuqb1j r-boxShadow-1a0psd9 r-height-h3s6tt r-justifyContent-1777fci r-width-rwqe4o"
    dir={null}
    ref={[Function]}
    style={
      {
        "backgroundColor": "rgba(255,0,0,0.13)",
      }
    }
  >
    <div
      className="css-text-146c3p1"
      data-testid="music-icon-muted"
      dir="auto"
      ref={[Function]}
    >
      volume-mute
    </div>
  </div>
</button>
`;

exports[`MusicControl should show mute icon when music is not playing 1`] = `
<button
  aria-label="Play background music"
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-justifyContent-1777fci"
  data-testid="music-control-button"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  role="button"
  style={
    {
      "transitionDuration": "0s",
    }
  }
  type="button"
>
  <div
    className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-1fuqb1j r-boxShadow-1a0psd9 r-height-h3s6tt r-justifyContent-1777fci r-width-rwqe4o"
    dir={null}
    ref={[Function]}
    style={
      {
        "backgroundColor": "rgba(74,144,226,0.13)",
      }
    }
  >
    <div
      className="css-text-146c3p1"
      data-testid="music-icon-muted"
      dir="auto"
      ref={[Function]}
    >
      volume-mute
    </div>
  </div>
</button>
`;

exports[`MusicControl should show volume icon when music is playing 1`] = `
<button
  aria-label="Pause background music"
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-justifyContent-1777fci"
  data-testid="music-control-button"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  role="button"
  style={
    {
      "transitionDuration": "0s",
    }
  }
  type="button"
>
  <div
    className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-1fuqb1j r-boxShadow-1a0psd9 r-height-h3s6tt r-justifyContent-1777fci r-width-rwqe4o"
    dir={null}
    ref={[Function]}
    style={
      {
        "backgroundColor": "rgba(74,144,226,0.13)",
      }
    }
  >
    <div
      className="css-text-146c3p1"
      data-testid="music-icon-playing"
      dir="auto"
      ref={[Function]}
    >
      volume-high
    </div>
  </div>
</button>
`;
